// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalPageVoteThreshold /> should render proposal page vote threshold 1`] = `
<ProposalPagestyle__Card
  id="ProposalPageVoteThreshold"
>
  <ProposalPageVoteThreshold__ProposalPageVoteThresholdContainer>
    <h4>
      proposal.vote.threshold.title
    </h4>
    <p>
      <div
        className="vote-counter"
      >
        <ProposalPagestyle__CategoryCircledIcon
          paddingLeft={6}
          paddingTop={0}
          size={24}
        >
          <Icon
            color="#6c757d"
            name="like"
            size={14}
          />
        </ProposalPagestyle__CategoryCircledIcon>
        proposal.vote.count
      </div>
      <MetadataRow
        categoryPaddingLeft={5}
        categoryPaddingTop={0}
        categorySize={24}
        color="#6c757d"
        content="count-points"
        name="trophy"
        paddingLeft={3}
        paddingTop={0}
        ready={true}
        size={14}
      />
    </p>
    <ProgressBar
      active={false}
      bsClass="progress-bar"
      bsStyle="success"
      isChild={false}
      label="30%"
      max={100}
      min={0}
      now={30}
      srOnly={false}
      striped={false}
    />
    <div>
      proposal.vote.threshold.progress
    </div>
  </ProposalPageVoteThreshold__ProposalPageVoteThresholdContainer>
</ProposalPagestyle__Card>
`;

exports[`<ProposalPageVoteThreshold /> should render proposal page vote threshold reached 1`] = `
<ProposalPagestyle__Card
  id="ProposalPageVoteThreshold"
>
  <ProposalPageVoteThreshold__ProposalPageVoteThresholdContainer>
    <h4>
      proposal.vote.threshold.reached
    </h4>
    <p>
      <div
        className="vote-counter"
      >
        <ProposalPagestyle__CategoryCircledIcon
          paddingLeft={6}
          paddingTop={0}
          size={24}
        >
          <Icon
            color="#6c757d"
            name="like"
            size={14}
          />
        </ProposalPagestyle__CategoryCircledIcon>
        proposal.vote.count
      </div>
    </p>
    <ProgressBar
      active={false}
      bsClass="progress-bar"
      bsStyle="success"
      isChild={false}
      label="150%"
      max={150}
      min={0}
      now={150}
      srOnly={false}
      striped={false}
    />
    <div>
      proposal.vote.threshold.progress_reached
    </div>
  </ProposalPageVoteThreshold__ProposalPageVoteThresholdContainer>
</ProposalPagestyle__Card>
`;
